Frameのバグ修正