@@ -1,3 +1,5 @@
+package Frame;
+
 /*
  AIDemonProcReadTest.java
   すべての種類のデモン手続きのスーパークラス
@@ -5,25 +7,22 @@
   when-read procedure は，スロット値を Iterator として
   返さなけらばならない
 */
-
-import java.util.*;
+import java.util.Iterator;
 
 class AIDemonProcReadTest extends AIDemonProc {
 
-public
-Object eval(
- AIFrameSystem inFrameSystem,
- AIFrame inFrame,
- String inSlotName,
- Iterator inSlotValues,
- Object inOpts )
-{
- Object height = inFrame.readSlotValue( inFrameSystem, "height", false );
- if ( height instanceof Integer ) {
-  int h = ((Integer) height).intValue();
-  return AIFrame.makeEnum( new Integer( (int) (0.9 * (h - 100))) );
- }
- return null;
-}
+	public Object eval(
+			AIFrameSystem inFrameSystem,
+			AIFrame inFrame,
+			String inSlotName,
+			Iterator<Object> inSlotValues,
+			Object inOpts) {
+		Object height = inFrame.readSlotValue(inFrameSystem, "height", false);
+		if (height instanceof Integer) {
+			int h = ((Integer) height).intValue();
+			return AIFrame.makeEnum(Integer.valueOf((int) (0.9 * (h - 100))));
+		}
+		return null;
+	}
 
 }
